--- a/djs-chat/package.json
+++ b/djs-chat/package.json
@@ -32,6 +32,7 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
+    "bit-tabs": "^0.2.0",
     "bootstrap": "^3.3.6",
     "can": "^2.3.16",
     "can-connect": "^0.5.0",
