--- a/djs-chat/package.json
+++ b/djs-chat/package.json
@@ -43,7 +43,8 @@
     "done-serve": "^0.1.0",
     "generator-donejs": "^0.8.0",
     "jquery": "~2.2.1",
-    "steal": "^0.15.0"
+    "steal": "^0.15.0",
+    "steal-socket.io": "^2.0.0"
   },
   "devDependencies": {
     "can-fixture": "^0.1.2",
